css/style.css
textarea[name$='_demo_content'] {
  font: clamp(90%, 0.9em, 2ex) var(--monospace);
  resize: vertical;
  overflow: auto;
}

textarea[name$='_content'] + .CodeMirror {
  height: 30em;
  resize: vertical;
  overflow: auto;
  font-size: clamp(90%, 0.9em, 2ex);

  .CodeMirror-linenumber {
    font-size: 80%;
    line-height: 1.75;
  }
}

table.fitcontent {
  width: fit-content;
}

.secondlevel {
  margin-inline-start: 1em;
}

.multicolumns {
  display: grid;
  grid-template-columns: repeat(auto-fit, minmax(min(42em, calc(100% - 2em)), 1fr));
  gap: 1em;
  margin: 1em 0.5em 1em 0;

  & > p {
    /* 1st level messages, form buttons group, ... */
    grid-column: 1 / -1;
    width: fit-content;
  }

  & > * {
    /* Margins are managed by grid gap */
    margin: 0;
  }
}

